<resources>
    <string name="app_name">我的天气</string>
    <string name="action_settings">Settings</string>
    <string name="city_tv_dressup_sign">紫外线指数</string>
    <string name="city_tv_windy_sign">风向</string>
    <string name="city_tv_windy2_sign">风力</string>
    <string name="city_tv_humid_sign">湿度</string>
    <string name="city_tv_excise_sign">运动指数</string>
    <string name="city_tv_clother_sign">穿衣指数</string>
    <string name="city_tv_travel_sign">旅游指数</string>
    <string name="city_tv_wash_sign">洗车指数</string>
    <string name="city_tv_hot_sign">中暑指数</string>
    <string name="city_b_button_name">未来七天天气</string>
    <string name="city_ed_hint">请输入要查询的城市...</string>
    <string name="city_b_sure">确定</string>
    <string name="city_tv_future">查看未来七天天气</string>
    <string name="manager_et_text">请输入要添加的城市</string>
    <string name="manager_et_add">添加</string>
</resources>
